# eventsourcing

./: .gitignore  LICENSE  default.nix  eventsourcing.cabal  nixpkgs.json  release0.nix  shell.nix  stack.yaml
src/: Aggregate.hs  Envelope.hs  InMemory.hs  Store.hs
test/: Spec.hs  Types.hs
