name:                eventsourcing
version:             0.0.0.1
homepage:            https://github.com/jrsll/eventsourcing#readme
license:             BSD3
license-file:        LICENSE
author:              Johan Rosell
maintainer:          johan.rosell@gmail.com
copyright:           2018 Johan Rosell
category:            EventSourcing
build-type:          Simple
--documentation:       true
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aggregate
                     , Store
                     , Envelope
                     , InMemory

  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , aeson
                     , time
                     -- move these to another file
                     , ghc-mod
                     , hlint
                     --, hindent
                     --, cabal-helper
                     --, extra
                     --, haskell-src-exts
                     --, monad-journal
                     --, optparse-applicative
  default-language:    Haskell2010

test-suite eventsourcing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Types
  main-is:             Spec.hs
  build-depends:       base
                     , eventsourcing
                     , QuickCheck
                     , transformers
                     , aeson
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jrsll/eventsourcing
